# modelSpark-python

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/routes/: usre.py
